--- a/sponsors.html
+++ b/sponsors.html
@@ -165,7 +165,7 @@
 					<a href="http://www.ttmtech.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				</div>
 				<div class="col-sm-3 center">
-					<a href="https://mydynamicfitness.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+						<a href="http://www.lakewissotasandbar.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/thesandbar.png" alt="The SandBar"></a>
 				</div>
 			</div>
 			<br/>
