--- a/schedule.html
+++ b/schedule.html
@@ -24,166 +24,152 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<!-- FAVICON -->
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+	<!-- FAVICON -->
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-						<span class="menuTrigger" id="hamburger-one">
-							<span class="mainLine"></span>
-						</span>
-					</button>
-					<a class="navbar-brand" href="index.html">
-						<img alt="logo" src="images/logo.png" />
-					</a>
-					<!-- Logo top aligns with navbar text top. -->
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+					<span class="menuTrigger" id="hamburger-one">
+						<span class="mainLine"></span>
+					</span>
+				</button>
+				<a class="navbar-brand" href="index.html">
+					<img alt="logo" src="images/logo.png" />
+				</a>
+				<!-- Logo top aligns with navbar text top. -->
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="sliding-middle-out"><a href="index.html">Home</a></li>
-						<li class="dropdown">
-							<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="liveResults.html">Live Results</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="directions.html">Directions</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="schedule.html">Schedule</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="lodging.html">Lodging</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="pastResults.html">Past Results</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="assets/WIFA_details.pdf">WIFA Tournament</a></li>
-							</ul>
-						</li>
-						<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
-						<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
-						<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
-						<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
-						<li class="social-media">
-							<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-								<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-							</a>
-						</li>
-						<li>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="liveResults.html">Live Results</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="directions.html">Directions</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="schedule.html">Schedule</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="lodging.html">Lodging</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="pastResults.html">Past Results</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="assets/WIFA_details.pdf">WIFA Tournament</a></li>
+						</ul>
+					</li>
+					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
+					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
+					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
+					<li class="social-media">
+						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
 							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img>
-							</a>
-						</li>
-						<li>
-							<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-								<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-							</a>
-						</li>
-						<li>
-							<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-								<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
 			<!-- /.container -->
-		</nav>
-	</head>
+	</nav>
+</head>
 
-	<body>
-		<div class="wrapper>" <section id="content">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-6">
-						<br />
-						<!-- BREAK -->
-						<br />
-						<!-- BREAK -->
-						<br />
-						<!-- BREAK -->
-						<br />
-						<!-- BREAK -->
-						<h2 class="headers">Schedule </h2>
-					</div>
-					<!-- #col-sm-6 -->
+<body>
+	<div class="wrapper>" <section id="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6">
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<h2 class="headers">Schedule </h2>
 				</div>
-				<!-- #container -->
-				<div class="table-responsive">
-					<table class="table ">
-						<thead>
-							<!-- make these bold or the titles for the table of the schedule-->
-							<tr>
-								<th>Saturday, February 10th</th>
-								<th></th>
-								<th></th>
-							</tr>
-						</thead>
+				<!-- #col-sm-6 -->
+			</div>
+			<!-- #container -->
+			<div class="table-responsive">
+				<table class="table ">
+					<thead>
+						<!-- make these bold or the titles for the table of the schedule-->
+						<tr>
+							<th>Saturday, February 10th</th>
+							<th></th>
+							<th></th>
+						</tr>
+					</thead>
 
-						<thead>
-							<!-- make these bold or the titles for the table of the schedule-->
-							<tr>
-								<th>Location</th>
-								<th>Time</th>
-								<th>Event</th>
-							</tr>
-						</thead>
+					<thead>
+						<!-- make these bold or the titles for the table of the schedule-->
 						<tr>
-							<td>Lake Wissota</td>
-							<td>7:00AM</td>
-							<td>Contest Begins! No need to pre-register, just head out to the ice. </td>
+							<th>Location</th>
+							<th>Time</th>
+							<th>Event</th>
 						</tr>
-						<tr>
-							<td>The View &amp; The Edge Weigh in Stations</td>
-							<td>9:00AM</td>
-							<td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
-						</tr>
-						<tr>
-							<td>Lake Wissota</td>
-							<td>12:00PM</td>
-							<td>Kids Klub event on the ice in front of The View (Free lunch for kids), Prize drawings at 1:00PM</td>
-						</tr>
-						<tr>
-							<td>The View &amp; The Edge </td>
-							<td>2:00PM</td>
-							<td>Weigh-in Stations close, must be in line by 2:00PM to register your fish</td>
-						</tr>
-						<tr>
-							<td>The View</td>
-							<td>3:00PM</td>
-							<td>Raffle Prize drawing, tickets available for purchase until drawing begins</td>
-						</tr>
-						<tr>
-							<td>The View</td>
-							<td>4:00PM</td>
-							<td>Fish contest winners announced and prizes distributed</td>
-						</tr>
-						<tr>
-							<td>The View</td>
-							<td>5:00PM</td>
-							<td>Stick around for music and fish stories at the bar</td>
-						</tr>
+					</thead>
+					<tr>
+						<td>Lake Wissota</td>
+						<td>7:00AM</td>
+						<td>Contest Begins! No need to pre-register, just head out to the ice. </td>
+					</tr>
+					<tr>
+						<td>The View &amp; The Edge Weigh in Stations</td>
+						<td>9:00AM</td>
+						<td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
+					</tr>
+					<tr>
+						<td>Lake Wissota</td>
+						<td>12:00PM</td>
+						<td>Kids Klub event on the ice in front of The View (Free lunch for kids), Prize drawings at 1:00PM</td>
+					</tr>
+					<tr>
+						<td>The View &amp; The Edge </td>
+						<td>2:00PM</td>
+						<td>Weigh-in Stations close, must be in line by 2:00PM <b>SHARP!</b> to register your fish</td>
+					</tr>
+					<tr>
+						<td>The View</td>
+						<td>3:00PM</td>
+						<td>Raffle Prize drawing, tickets available for purchase until drawing begins</td>
+					</tr>
+					<tr>
+						<td>The View</td>
+						<td>4:00PM</td>
+						<td>Fish contest winners announced and prizes distributed</td>
+					</tr>
+					<tr>
+						<td>The View</td>
+						<td>5:00PM</td>
+						<td>Stick around for music and fish stories at the bar</td>
+					</tr>
 					</tbody>
 				</table>
 			</div>
@@ -196,16 +182,16 @@
 			<!-- BREAK -->
 			<br />
 			<!-- BREAK -->
-		</section>
+			</section>
 
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-		<script src="js/main.js" type="text/javascript"></script>
-	</div>
+			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<!-- Include all compiled plugins (below), or include individual files as needed -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+			<script src="js/main.js" type="text/javascript"></script>
+		</div>
 </body>
 
 <footer>
@@ -227,7 +213,7 @@
 			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
 			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+			<a href="http://www.lakewissotasandbar.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/thesandbar.png" alt="The SandBar"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
 			<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
 		</div>
@@ -254,7 +240,7 @@
 				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
 				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				<a href="http://www.lakewissotasandbar.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/thesandbar.png" alt="The SandBar"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
 			</div>
@@ -265,4 +251,4 @@
 	</div>
 </footer>
 
-		</html>
+</html>
