Update 'bait available'

--- a/tickets.html
+++ b/tickets.html
@@ -159,7 +159,7 @@
 					<ul>
 						<li>Raffle tickets not sold at these locations</li>
 					</ul>
-					<li>Jacobson's Hardware available</li>
+					<li>Jacobson's Hardware (bait available)</li>
 					<li>UWEC Recreation</li>
 					<li>The SandBar and Grill</li>
 					<li>The View at Lake Wissota</li>
