Update WIFA Tournament Page

--- a/liveResults.html
+++ b/liveResults.html
@@ -77,7 +77,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="assets/WIFA_details.pdf">WIFA Tournament</a></li>
+							<li><a href="wifa.html">WIFA Tournament</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
@@ -181,9 +181,9 @@
 			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
 			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="http://www.lakewissotasandbar.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/thesandbar.png" alt="The SandBar"></a>
+			<a href="http://www.lakewissotasandbar.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/thesandbar.png" alt="The SandBar" style = "width:55px;"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
-			<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+			<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall" style = "width:55px;"></a>
 		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
@@ -208,9 +208,9 @@
 				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
 				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-				<a href="http://www.lakewissotasandbar.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/thesandbar.png" alt="The SandBar"></a>
+				<a href="http://www.lakewissotasandbar.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/thesandbar.png" alt="The SandBar" style = "width:55px;"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
-				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall" style = "width:55px;"></a>
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
