--- a/sponsors.html
+++ b/sponsors.html
@@ -73,7 +73,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="assets/WIFA_details.pdf">WIFA Tournament</a></li>
+							<li><a href="wifa.html">WIFA Tournament</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
@@ -154,7 +154,7 @@
 					<a href="http://www.xtrememotorsportsllc.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
 				</div>
 				<div class="col-sm-3 center">
-					<a href="https://www.aceautomall.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+					<a href="https://www.aceautomall.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall" style = "width:75px;"></a>
 				</div>
 			</div>
 			<div class="row">
@@ -165,7 +165,7 @@
 					<a href="http://www.ttmtech.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				</div>
 				<div class="col-sm-3 center">
-						<a href="http://www.lakewissotasandbar.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/thesandbar.png" alt="The SandBar"></a>
+						<a href="http://www.lakewissotasandbar.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/thesandbar.png" alt="The SandBar" style = "width:75px;"></a>
 				</div>
 			</div>
 			<br/>
