--- a/pastResults.html
+++ b/pastResults.html
@@ -749,7 +749,7 @@
 									<td>Crappie</td>
 									<td>*$500 Cash</td>
 								</tr>
-							</tbody></table>
+							</tbody>
 						</table>
 					</div>
 					<!-- #table-responsive -->
