--- a/new-pages/index.html
+++ b/new-pages/index.html
@@ -11,7 +11,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/brand.css">
+  <link rel="stylesheet" href="../css/brand.css">
 
   <title>Jig's Up | Home</title>
 
@@ -37,7 +37,7 @@
   <div class="container sticky-top">
     <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom border-right border-left rounded-bottom mb-4">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" alt="Jigs Up Logo">
+        <img src="../images/logo.png" alt="Jigs Up Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -83,16 +83,16 @@
         </ul>
         <ul class="navbar-nav ml-auto d-inline-block">
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lclub.png" class="social-media" alt="Lions Club"/></a>
+            <a class="nav-link " href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="../images/lclub.png" class="social-media" alt="Lions Club"/></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="https://instagram.com/UWEC_Recreation/"><img src="images/instagram.png" class="social-media" alt="Instagram"/></a>
+            <a class="nav-link " href="https://instagram.com/UWEC_Recreation/"><img src="../images/instagram.png" class="social-media" alt="Instagram"/></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="https://twitter.com/uwecrecreation/"><img src="images/twitter.png" class="social-media" alt="Twitter"/></a>
+            <a class="nav-link " href="https://twitter.com/uwecrecreation/"><img src="../images/twitter.png" class="social-media" alt="Twitter"/></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522/"><img src="images/facebook.png" class="social-media" alt="Facebook"/></a>
+            <a class="nav-link " href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522/"><img src="../images/facebook.png" class="social-media" alt="Facebook"/></a>
           </li>
         </ul>
       </div>
@@ -104,19 +104,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="images/slider/bleepbloop.jpeg" alt="First slide">
+              <img class="d-block img-fluid" src="../images/slider/bleepbloop.jpeg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="images/slider/slide2.jpeg" alt="Second slide">
+              <img class="d-block img-fluid" src="../images/slider/slide2.jpeg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="images/slider/slide3.jpeg" alt="Third slide">
+              <img class="d-block img-fluid" src="../images/slider/slide3.jpeg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="images/slider/slide4.jpeg" alt="Fourth slide">
+              <img class="d-block img-fluid" src="../images/slider/slide4.jpeg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="images/slider/slide5.jpeg" alt="Fifth slide">
+              <img class="d-block img-fluid" src="../images/slider/slide5.jpeg" alt="Fifth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -134,17 +134,17 @@
     <div class="row mx-6">
       <div class="col-4">
         <a href="http://www.scheels.com" target="_blank">
-          <img class="img-fluid" src="images/sponsors/scheels.png" alt="Scheels">
+          <img class="img-fluid" src="../images/sponsors/scheels.png" alt="Scheels">
         </a>
       </div>
       <div class="col-4">
         <a href="http://www.eauclaireford.com/" target="_blank">
-          <img class="img-fluid" src="images/sponsors/ford.png" alt="Ford">
+          <img class="img-fluid" src="../images/sponsors/ford.png" alt="Ford">
         </a>
       </div>
       <div class="col-4">
         <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-          <img class="img-fluid" src="images/sponsors/Subway.png" alt="Subway">
+          <img class="img-fluid" src="../images/sponsors/Subway.png" alt="Subway">
         </a>
       </div>
     </div>
@@ -154,13 +154,13 @@
       <h1 class="headers brand-blue"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
       <div class="row justify-content-center">
         <div class="col-4 col-md-3">
-          <a href="http://www.uwec.edu/recreation"><img src="images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
+          <a href="http://www.uwec.edu/recreation"><img src="../images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
         </div>
         <div class="col-4 col-md-3">
-          <a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lions2.png" class="logo img-fluid" alt="Lions Club"></a>
+          <a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="../images/lions2.png" class="logo img-fluid" alt="Lions Club"></a>
         </div>
         <div class="col-4 col-md-3">
-          <a href="http://blugolds.com/landing/index"><img src="images/athletics2.png" class="logo img-fluid" alt="Athletics"></a>
+          <a href="http://blugolds.com/landing/index"><img src="../images/athletics2.png" class="logo img-fluid" alt="Athletics"></a>
         </div>
       </div>
     </div>
@@ -253,51 +253,51 @@
     <div class="container border border-bottom-0 pb-2 bg-light">
       <div class="row mx-6">
         <div class="col-md-4 text-center">
-          <img src="images/sponsors/scheels.png" class="img-fluid title-sponsor" alt="Scheels">
+          <img src="../images/sponsors/scheels.png" class="img-fluid title-sponsor" alt="Scheels">
         </div>
         <div class="col-md-4 text-center">
-          <img src="images/sponsors/ford.png" class="img-fluid title-sponsor" alt="Ford">
+          <img src="../images/sponsors/ford.png" class="img-fluid title-sponsor" alt="Ford">
         </div>
         <div class="col-md-4 text-center">
-          <img src="images/sponsors/Subway.png" class="img-fluid title-sponsor" alt="Subway">
+          <img src="../images/sponsors/Subway.png" class="img-fluid title-sponsor" alt="Subway">
         </div>
       </div>
       <div class="row mx-6">
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/weau13.png" class="img-fluid sponsor" alt="WEAU13">
+          <img src="../images/sponsors/weau13.png" class="img-fluid sponsor" alt="WEAU13">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/eskimo.png" class="img-fluid sponsor" alt="Eskimo">
+          <img src="../images/sponsors/eskimo.png" class="img-fluid sponsor" alt="Eskimo">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/megaholiday.png" class="img-fluid sponsor" alt="Mega Holiday">
+          <img src="../images/sponsors/megaholiday.png" class="img-fluid sponsor" alt="Mega Holiday">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/prestige.png" class="img-fluid sponsor" alt="Prestige">
+          <img src="../images/sponsors/prestige.png" class="img-fluid sponsor" alt="Prestige">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
+          <img src="../images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
+          <img src="../images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
+          <img src="../images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/ttmtech.png" class="img-fluid sponsor" alt="TTMTech">
+          <img src="../images/sponsors/ttmtech.png" class="img-fluid sponsor" alt="TTMTech">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
+          <img src="../images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/dynamic.png" class="img-fluid sponsor" alt="Dynamic">
+          <img src="../images/sponsors/dynamic.png" class="img-fluid sponsor" alt="Dynamic">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
+          <img src="../images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
+          <img src="../images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
         </div>
       </div>
     </div>
