--- a/wifa.html
+++ b/wifa.html
@@ -17,6 +17,7 @@
 	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
 
 
+
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -112,26 +113,31 @@
 					<!-- BREAK -->
 					<br />
 					<!-- BREAK -->
-					<h2 class="headers">WIFA Tournament</h2>
-
+					<a><img class="indexTitleSponsor" src="images/wifa/wifa-logo.jpg" class="img-responsive" alt="WIFA Tournament" style="width:250px; float:right;"></a>
+					<h2 class="headers">Jig’s Up hosts WIFA Ice Fishing Contest</h2>
 					<br />
-				</div>
-
-				<div class="sponsors">
-					<a><img class="indexTitleSponsor" src="images/wifa/wifa-logo.jpg" class="img-responsive" alt="WIFA Tournament" style="width:150px;"></a>
-					<a><img class="indexTitleSponsor" src="images/wifa/jigsup.png" class="img-responsive" alt="WIFA Tournament" style="width:400px;"></a>
-					<a><img class="indexTitleSponsor" src="images/wifa/sponsors.png" class="img-responsive" alt="WIFA Tournament" style="width:200px;"></a>
-				</div>
-
-				<div class="row">
-					<h2 class="headers">Jig’s Up host WIFA Ice Fishing Contest </h2>
-					<h2 class="headers">
-						Lake Wissota | February 9, 2019 | 7:30 am – 1 pm</h2>
+					<h3 class="headers"><b>Our Mission:</b></h3>
+					<h3></h3>
+					<blockquote>
+						The Wisconsin Interscholastic Fishing Association (WIFA) is committed to the education, conservation, and management of our natural resources while building an understanding of our aquatic ecosystems and sciences. Our primary goals are
+						to get students involved in the outdoors and to become future ambassadors of our sport through the foundation of spirited competition.
+					</blockquote>
+					<h3 class="headers"><b>Date:</b></h3>
+					<h3>Saturday, February 9th, 2019</h3>
 					<br />
-					<p>
-						<a><img class="indexTitleSponsor" src="images/wifa/jigsuporg.png" class="img-responsive" align="right" alt="WIFA Tournament" style="width:200px;"></a>
+					<br />
+					<h3 class="headers"><b>Time:</b></h3>
+					<h3>7:30 am – 1 pm</h3>
+					<br />
+					<br />
+					<h3 class="headers"><b>Site:</b></h3>
+					<h3>Lake Wissota </h3>
+					<br />
+					<br />
+					<h3 class="headers"><b>Rules of Tournament:</b></h3>
+					<h3></h3>
+					<blockquote>
 						<ul>
-
 							<li>10 person or less High School team, schools may have multiple teams, no sharing of fish with other teams. All WI DNR Fishing regulations apply, <a href="https://dnr.wi.gov/" target="_blank">https://dnr.wi.gov/</a>.</li>
 							<li>Fishing may only be on Lake Wissota, Chippewa Falls, <a href=" http://jigsup.org/directions.html" target="_blank">http://jigsup.org/directions.html</a>.</li>
 							<li>Top Length for each species gets registered (1 of each species): Northern, Bass, Walleye, Perch, Crappie, Bluegill.</li>
@@ -144,27 +150,7 @@
 							<li>Free lunch ticket for all team members: hot dog, chips, and drink</li>
 							<li>Call or E-mail by Thursday, February 5 to reserve a team, include coach’s name, email, and phone number: <br>Andy Jepsen | <a href="mailto:jepsenan@uwec.edu">jepsenan@uwec.edu</a> | 715-836-2176</li>
 						</ul>
-					</p>
-
-					<p>
-						<h3 class="headers">Jig’s Up Blugold Ice Fishing Contest Option:</h3><br><br>
-						If any Jig’s Up WIFA Ice Fishing Contest anglers choose to also participate in the Jig’s Up Blugold Ice Fishing Contest and be eligible for the Jig’s Up Blugold Ice Fishing Contest Fish Prizes, they must abide by the Contest rules
-						including:
-						<br><br>
-						<ul>
-							<li>Contest participants may fish only on Lake Wissota on Saturday, February 9, 2019, between 7am and 2pm. Tickets are $25.00 in advance (through February 8) and $40 until 9am on February 9 - with no limit on the number of tickets an
-								individual
-								can purchase or prizes they may win.</li>
-							<li>Anglers must be in line by 2 pm SHARP to register fish. Contestants will be allowed to fish anywhere on Lake Wissota. Ice Fishing Permitted ONLY. One fish per Fish Ticket purchased can be registered of any of the following species:
-								northern,
-								walleye, bass, and pan fish (yellow perch, bluegills, crappies, pumpkinseed, sunfish). Fish not listed here are ineligible for registration. Fish may be taken with tip-ups or by rod and reel. There is no age requirement on contest
-								participation (must be 18 to years of age to claim the truck); anyone over the age of 16 years must hold a valid Wisconsin Fishing license.</li>
-							<li>All fish entered must be alive and brought to a weigh-in station immediately. All fish registered will be marked so they cannot be registered again. Fish that are dead, frozen, or tampered with are ineligible.</li>
-						</ul>
-						<br>For a complete set a rules, visit <b>jigsup.org</b>.
-
-					</p>
-
+					</blockquote>
 				</div>
 		</section>
 
