Updated rules and prize verbage

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
+							<li><a href="assets/2019_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="wifa.html">WIFA Tournament</a></li>
 						</ul>
@@ -200,7 +200,7 @@
 						<h3 class="headers"><b>Prize Information:</b></h3>
 						<blockquote>
 							Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets!
-							Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
+							Prizes awarded by weight: top 25 fish and every 5th place thereafter to 300th place so even a small fish can win big!
 							<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Raffle prizes include a <b>2019 Polaris
 								Sportsman 450 4-wheeler, 4-$500 Scheels Gift Cards, $100 Mega! CO-OP Gift Cards, Steak Packages,</b> and more! Raffle tickets are $5 each or 5 for $20! <b>$100 Gift Cards</b> are awarded to the top fish by weight in each category: northern,
 							walleye, and pan fish.
