--- a/new-pages/directions.html
+++ b/new-pages/directions.html
@@ -157,57 +157,87 @@
       </div>
     </div>
 
-  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
-    <div class="row mx-6">
-      <div class="col-md-4 text-center">
-        <img src="../images/sponsors/scheels.png" class="/img-fluid title-sponsor" alt="Scheels">
+    <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
+      <div class="row mx-6">
+        <div class="col-md-4 text-center">
+          <a href="#" class="title-sponsor">
+            <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
+          </a>
+        </div>
+        <div class="col-md-4 text-center">
+          <a href="#" class="title-sponsor">
+            <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
+          </a>
+        </div>
+        <div class="col-md-4 text-center">
+          <a href="#" class="title-sponsor">
+            <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
+          </a>
+        </div>
       </div>
-      <div class="col-md-4 text-center">
-        <img src="../images/sponsors/ford.png" class="img-fluid title-sponsor" alt="Ford">
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="../images/sponsors/Subway.png" class="img-fluid title-sponsor" alt="Subway">
+      <div class="row mx-6">
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
+          </a>
+        </div>
       </div>
     </div>
-    <div class="row mx-6">
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/weau13.png" class="img-fluid sponsor" alt="WEAU13">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/eskimo.png" class="img-fluid sponsor" alt="Eskimo">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/megaholiday.png" class="img-fluid sponsor" alt="Mega Holiday">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/prestige.png" class="img-fluid sponsor" alt="Prestige">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/ttmtech.png" class="img-fluid sponsor" alt="TTMTech">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/dynamic.png" class="img-fluid sponsor" alt="Dynamic">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
-      </div>
-      <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-        <img src="../images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
-      </div>
-    </div>
-  </div>
 
 </div>
 
