--- a/new-pages/index.html
+++ b/new-pages/index.html
@@ -250,58 +250,87 @@
       </div>
     </div>
 
-    <div class="container border border-bottom-0 pb-2 bg-light">
+    <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
       <div class="row mx-6">
         <div class="col-md-4 text-center">
-          <img src="../images/sponsors/scheels.png" class="img-fluid title-sponsor" alt="Scheels">
+          <a href="#" class="title-sponsor">
+            <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
+          </a>
         </div>
         <div class="col-md-4 text-center">
-          <img src="../images/sponsors/ford.png" class="img-fluid title-sponsor" alt="Ford">
+          <a href="#" class="title-sponsor">
+            <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
+          </a>
         </div>
         <div class="col-md-4 text-center">
-          <img src="../images/sponsors/Subway.png" class="img-fluid title-sponsor" alt="Subway">
+          <a href="#" class="title-sponsor">
+            <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
+          </a>
         </div>
       </div>
       <div class="row mx-6">
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/weau13.png" class="img-fluid sponsor" alt="WEAU13">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/eskimo.png" class="img-fluid sponsor" alt="Eskimo">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/megaholiday.png" class="img-fluid sponsor" alt="Mega Holiday">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/prestige.png" class="img-fluid sponsor" alt="Prestige">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/ttmtech.png" class="img-fluid sponsor" alt="TTMTech">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/dynamic.png" class="img-fluid sponsor" alt="Dynamic">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
+          </a>
         </div>
         <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <img src="../images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
+          <a href="#" class="sponsor">
+            <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
+          </a>
         </div>
       </div>
     </div>
-  </div>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
